Fix gallery lightbox shifts page to the left

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ WDP ID: 938302
 }
 
 html {
-	-webkit-transition: all 0.3s; 
+	-webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
@@ -36,16 +36,16 @@ h1, h2, h3, h4, h5, h6, p {
 
 a,
 .accordion-header {
-	-webkit-transition: background-color 0.3s; 
+	-webkit-transition: background-color 0.3s;
   transition: background-color 0.3s;
 }
 
-.right-arrow a, 
-.right-arrow a:after, 
+.right-arrow a,
+.right-arrow a:after,
 input,
 #page .inline-gallery .ugallery_item a:hover img.ugallery-image {
-	-webkit-transition: all 0.3s; 
-  transition: all 0.3s;	
+	-webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 a {
@@ -68,7 +68,7 @@ a:hover {
 	line-height: 30px;
 }
 
-.upfront-edit-theme .accordion-content { 
+.upfront-edit-theme .accordion-content {
 	display: block;
 }
 
@@ -148,29 +148,29 @@ a:hover {
  position: relative;
  background-position: -355px -675px;
 }
- .youtube:before { 
+ .youtube:before {
  width: 35px;
- height: 35px;    
+ height: 35px;
  display: block;
- position: relative; 
+ position: relative;
  background-position: -63px -222px;
 }
  .youtube:hover:before,  .youtube.dark { background-position: -223px -222px;
 }
- .facebook:before { 
+ .facebook:before {
  width: 35px;
- height: 35px;    
+ height: 35px;
  display: block;
- position: relative; 
+ position: relative;
  background-position: -63px -383px;
 }
  .facebook:hover:before,  .facebook.dark { background-position: -223px -383px;
 }
- .twitter:before { 
+ .twitter:before {
  width: 35px;
- height: 35px;    
+ height: 35px;
  display: block;
- position: relative; 
+ position: relative;
  background-position: -63px -543px;
 }
  .twitter:hover:before,  .twitter.dark { background-position: -223px -543px;
@@ -233,16 +233,22 @@ a:hover {
 }
 
 .uf_font_icon {
- font-family: Meg;   
+ font-family: Meg;
 }
 
 @media (max-width: 1080px) {
-	.upfront-output-object h1 { font-size: 80px; }	
+	.upfront-output-object h1 { font-size: 80px; }
 }
 @media (max-width: 810px) {
-	.upfront-output-object h1 { font-size: 55px; }	
+	.upfront-output-object h1 { font-size: 55px; }
 }
 
 @media (max-width: 570px) {
-	.upfront-output-object h1 { font-size: 35px; }	
+	.upfront-output-object h1 { font-size: 35px; }
+}
+
+/* Temporary fix for lightbox shifting page to right when opened */
+html {
+	padding-right: 0 !important;
+	overflow: auto !important;
 }
